--- a/dot_config/kitty/kitty.conf
+++ b/dot_config/kitty/kitty.conf
@@ -23,7 +23,8 @@
 #:     italic_font      Operator Mono Book Italic
 #:     bold_italic_font Operator Mono Medium Italic
 
-font_size 16.0
+font_family Ubuntu Mono derivative Powerline
+font_size 17.0
 
 #: Font size (in pts)
 
@@ -57,7 +58,7 @@ font_size 16.0
 #: than 100% to reduce sizes (but this might cause rendering
 #: artifacts).
 
-symbol_map U+E0A0-U+E0A3,U+E0C0-U+E0C7 PowerlineSymbols
+# symbol_map U+E0A0-U+E0A3,U+E0C0-U+E0C7 PowerlineSymbols
 
 #: Map the specified unicode codepoints to a particular font. Useful
 #: if you need special rendering for some symbols, such as for
