--- a/config/private_dot_config/aerospace/aerospace.toml
+++ b/config/private_dot_config/aerospace/aerospace.toml
@@ -100,7 +100,7 @@ outer.right = 5
 
 # See: https://nikitabobko.github.io/AeroSpace/commands#layout
 alt-slash = 'layout tiles horizontal vertical'
-alt-shift-slash = 'layout accordion horizontal'
+alt-shift-slash = ['layout v_accordion', 'flatten-workspace-tree']
 cmd-ctrl-alt-f = 'layout floating tiling'      # Toggle between floating and tiling layout
 
 
@@ -166,8 +166,13 @@ if.app-name-regex-substring = 'Zed-Preview'
 run = 'move-node-to-workspace 2'
 
 [[on-window-detected]]
-if.app-name-regex-substring = 'wezterm'
+if.app-name-regex-substring = '^wezterm$'
 run = 'move-node-to-workspace 3'
+
+[[on-window-detected]]
+if.app-name-regex-substring = 'wezterm-gui'
+# if.window-title-regex-substring = '_scratch'
+run = ['layout floating']
 
 [[on-window-detected]]
 if.app-name-regex-substring = 'telegram'
@@ -176,3 +181,4 @@ run = 'move-node-to-workspace 4'
 [[on-window-detected]]
 if.app-name-regex-substring = 'mattermost'
 run = 'move-node-to-workspace 4'
+
