--- a/config/private_dot_config/ghostty/config
+++ b/config/private_dot_config/ghostty/config
@@ -1,10 +1,19 @@
-theme = kanagawabones
+# custom-shader = ./shaders/glitchy.glsl
+# custom-shader = ./shaders/bettercrt.glsl
+# custom-shader = ./shaders/bloom.glsl
+# custom-shader-animation = always
+
+# theme = rose-pine-moon
+# theme = "Kanagawa Wave"
+# theme = Github Dark
+theme = "Ayu"
 macos-option-as-alt = true
 font-size = 18
 #font-family = Cascadia Code NF
 #font-family = Berkeley Mono Condensed
 #font-family = Berkeley Mono SemiCondensed
 font-family = Berkeley Mono Medium SemiCondensed NF
+# font-family = Mono Lisa
 
 quick-terminal-screen = mouse
 quick-terminal-autohide = false
@@ -28,13 +37,13 @@ keybind = super+l=goto_split:right
 keybind = super+h=goto_split:left
 keybind = super+up=goto_split:top
 keybind = super+down=goto_split:bottom
-keybind = super+left=goto_split:right
+keybind = super+left=goto_split:left
+keybind = super+right=goto_split:right
 
-keybind = super+right=goto_split:left
-
-unfocused-split-opacity = 0.3
-background-opacity = 0.95
-background-blur-radius = 25
+# unfocused-split-opacity = 0.3
+# background-opacity = 0.95
+# background-blur-radius = 25
 
 window-padding-x = 4,4
 window-padding-y = 4,4
+keybind = shift+enter=text:\x1b\r
